-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 12
-
Component/s: hotspot
-
b24
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8216246 | 13 | Erik Gahlin | P3 | Resolved | Fixed | team |
| JDK-8217836 | 11.0.4-oracle | Erik Gahlin | P3 | Resolved | Fixed | b01 |
| JDK-8217929 | 11.0.3-oracle | Erik Gahlin | P3 | Closed | Fixed | b05 |
| JDK-8219534 | 11.0.3 | Erik Gahlin | P3 | Resolved | Fixed | master |
| JDK-8240399 | openjdk8u262 | Erik Gahlin | P3 | Resolved | Fixed | team |
Sometimes titlecase is not used or fields lack proper units.
- backported by
-
JDK-8216246 Inconsistencies in JFR event metadata
-
- Resolved
-
-
JDK-8217836 Inconsistencies in JFR event metadata
-
- Resolved
-
-
JDK-8219534 Inconsistencies in JFR event metadata
-
- Resolved
-
-
JDK-8240399 Inconsistencies in JFR event metadata
-
- Resolved
-
-
JDK-8243861 Inconsistencies in JFR event metadata
-
- Resolved
-
-
JDK-8217929 Inconsistencies in JFR event metadata
-
- Closed
-
- relates to
-
JDK-8239140 Backport JFR to OpenJDK 8
-
- Resolved
-
-
JDK-8215362 [TESTBUG] JFR GTest JfrTestNetworkUtilization fails
-
- Closed
-