8215175: Inconsistencies in JFR event metadata

Reviewed-by: mgronlun